--- a/package.json
+++ b/package.json
@@ -1,17 +1,56 @@
 {
-    "name": "nodejsapps",
-    "version": "1.0.0",
-    "description": "Node.js application Development\r 1. Creating Node.js Server Apps\r    1. Use Standard Node.js Modules\r       1. https://www.nodejs.org \r    2. Load the module in the current server-side JS file\r       1. Using 'require()' object\r          1. E.g. var obj = require('module-name')\r             1. The require() will load and cache the moduel for the current application\r             2. The  'obj' will be an instance of the module and have access to all its methods and properties\r    3. Default Node.js modules\r       1. https://nodejs.org/dist/latest-v12.x/docs/api/\r       2. http, http2, fs, util, dns, ect.\r    4. External Node.js modules\r       1. Developoed by Node.js community and must be installed explicitely using \r          1. npm install command\r          2. E.g.    \r             1. npm install -g <module-name>, module will be installed gloably for current user scope\r             2. npm install --save <module-name>, module will be imnstalled for current application\r          3. We need 'package.json' file to define modules\r             1. the package.json will be created using\r                1. npm init -y   \r                   1. The command will be used to create package.json with defaults\r                2. npm init \r                   1. The command to provide command line wizard to create package.json\r             2. Development only modules\r                1. packages will be declared in 'devDependencies' section of package.json\r                   1. npm install --save-dev <module-name or package-name>\r             3. Runtime modules\r                1. packages will be declared inside the 'dependencies' section of package.json\r                   1. npm install --save <module-name or package-name>",
-    "main": "index.js",
+    "name": "my-ng-app",
+    "version": "0.0.0",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build",
+        "test": "ng test",
+        "lint": "ng lint",
+        "e2e": "ng e2e"
     },
-    "keywords": [],
-    "author": "Mahesh",
-    "license": "ISC",
+    "private": true,
     "dependencies": {
-        "body-parser": "^1.19.0",
-        "cors": "^2.8.5",
-        "express": "^4.17.1"
+        "@angular/animations": "~9.0.0",
+        "@angular/cdk": "^9.0.0",
+        "@angular/common": "~9.0.0",
+        "@angular/compiler": "~9.0.0",
+        "@angular/core": "~9.0.0",
+        "@angular/forms": "~9.0.0",
+        "@angular/material": "^7.3.7",
+        "@angular/platform-browser": "~9.0.0",
+        "@angular/platform-browser-dynamic": "~9.0.0",
+        "@angular/router": "~9.0.0",
+        "bootstrap": "^4.4.1",
+        "lodash-es": "^4.17.15",
+        "rxjs": "~6.5.4",
+        "tslib": "^1.10.0",
+        "zone.js": "~0.10.2",
+        "@ngrx/core": "1.2.0",
+        "@ngrx/effects": "8.6.0",
+        "@ngrx/router-store": "8.6.0",
+        "@ngrx/store": "8.6.0",
+        "@ngrx/store-devtools": "8.6.0"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~0.900.1",
+        "@angular/cli": "~9.0.1",
+        "@angular/compiler-cli": "~9.0.0",
+        "@angular/language-service": "~9.0.0",
+        "@types/node": "^12.11.1",
+        "@types/jasmine": "~3.5.0",
+        "@types/jasminewd2": "~2.0.3",
+        "codelyzer": "^5.1.2",
+        "jasmine-core": "~3.5.0",
+        "jasmine-spec-reporter": "~4.2.1",
+        "karma": "~4.3.0",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-coverage-istanbul-reporter": "~2.1.0",
+        "karma-jasmine": "~2.0.1",
+        "karma-jasmine-html-reporter": "^1.4.2",
+        "protractor": "~5.4.3",
+        "ts-node": "~8.3.0",
+        "tslint": "~5.18.0",
+        "typescript": "~3.7.5"
     }
 }
